--- a/info.yaml
+++ b/info.yaml
@@ -1,6 +1,6 @@
 name: connector-wechat
 slug_name: wechat_connector
-version: 1.0.4
+version: v0.0.1-beta
 author: Answer Team
 description: 
   en_US: WeChat OAuth connector for Answer
